--- a/app/index.html
+++ b/app/index.html
@@ -19,9 +19,9 @@
     <!-- Auth0's Angular SDK Library -->
     <script type="text/javascript" src="https://cdn.auth0.com/w2/auth0-angular-4.js"></script>
     <!-- Angular wrapper for localStorage and sessionStorage. Defaults to ng-cookies if not available -->
-    <script src="http://cdn.rawgit.com/auth0/angular-storage/master/dist/angular-storage.js" type="text/javascript"> </script>
+    <script src="https://cdn.rawgit.com/auth0/angular-storage/master/dist/angular-storage.js" type="text/javascript"> </script>
     <!-- Angular wrapper library for JWT-->
-    <script src="http://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js" type="text/javascript"> </script>
+    <script src="https://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js" type="text/javascript"> </script>
     <!-- Your angular app-->
     <script src="app.js" type="text/javascript"> </script>
 
@@ -32,8 +32,8 @@
     <link href="assets/less/styles.less" rel="stylesheet/less" media="all">
     <!-- /prochtml -->
 
-    <link href='http://fonts.googleapis.com/css?family=RobotoDraft:300,400,400italic,500,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=RobotoDraft:300,400,400italic,500,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700' rel='stylesheet' type='text/css'>
 
     <!-- The following CSS are included as plugins and can be removed if unused-->
 
@@ -735,7 +735,7 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-    <script type='text/javascript' src='http://maps.google.com/maps/api/js?sensor=true'></script>
+    <script type='text/javascript' src='https://maps.google.com/maps/api/js?sensor=true'></script>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
