--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/chartist/dist/chartist.min.css" />
     <link rel="stylesheet" href="bower_components/angular-meditor/dist/meditor.min.css" />
-    <link rel="stylesheet" href="bower_components/nanoscroller/bin/css/nanoscroller.css" />
+    
     <link rel="stylesheet" href="bower_components/angular-ui-grid/ui-grid.css" />
     <link rel="stylesheet" href="bower_components/angular-ui-select/dist/select.css" />
     <link rel="stylesheet" href="bower_components/angular-ui-tree/dist/angular-ui-tree.min.css" />
@@ -343,7 +343,7 @@
                     <span>Notifications</span>
                     <span><a href="#/">Settings</a></span>
                 </div>
-                <div class="scrollthis scroll-pane" >
+                <div class="scroll-pane" >
                     <ul class="scroll-content">
                         <li ng-repeat="item in notifications">
                             <a href="#/" class="{{item.class}}">
@@ -372,7 +372,7 @@
                     <span><a href="#/">Settings</a></span>
                 </div>
 
-                <div class="scrollthis scroll-pane">
+                <div class=" scroll-pane">
                     <ul class="scroll-content">
                         <li ng-repeat="item in messages">
                             <a href>
@@ -748,8 +748,7 @@
     <script src="bower_components/angular-chartist.js/dist/angular-chartist.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-meditor/dist/meditor.min.js"></script>
-    <script src="bower_components/nanoscroller/bin/javascripts/jquery.nanoscroller.js"></script>
-    <script src="bower_components/angular-nanoscroller/scrollable.js"></script>
+    
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
