--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,8 @@
     <link href="assets/less/styles.less" rel="stylesheet/less" media="all">
     <!-- /prochtml -->
 
-    <link href='http://fonts.googleapis.com/css?family=RobotoDraft:300,400,400italic,500,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=RobotoDraft:300,400,400italic,500,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700' rel='stylesheet' type='text/css'>
 
     <!-- The following CSS are included as plugins and can be removed if unused-->
 
@@ -715,7 +715,7 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-    <script type='text/javascript' src='http://maps.google.com/maps/api/js?sensor=true'></script>
+    <script type='text/javascript' src='https://maps.google.com/maps/api/js?sensor=true'></script>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
