--- a/app/index.html
+++ b/app/index.html
@@ -190,15 +190,17 @@
 
 
         <li class="dropdown toolbar-icon-bg">
-            <a href="#" class="dropdown-toggle" data-toggle='dropdown'><span class="icon-bg"><i class="fa fa-fw fa-user"></i></span></a>
+            <a class="dropdown-toggle" data-toggle='dropdown'><span class="icon-bg"><i class="fa fa-fw fa-user"></i></span></a>
             <ul class="dropdown-menu userinfo arrow">
-                <li><a href="#"><span class="pull-left">Profile</span> <span class="badge badge-info">80%</span></a></li>
-                <li><a href="#"><span class="pull-left">Account</span> <i class="pull-right fa fa-user"></i></a></li>
+                <li><a href="#/app-vistaLocLis"><span class="pull-left">Locaciones</span></a></li>
+                <li><a href="#/app-vistaFacturacion"><span class="pull-left">Facturacion</span></a></li>
+                <li><a href="#/app-vistaListas"><span class="pull-left">Listas</span></a></li>
+                <!--<li><a href="#"><span class="pull-left">Account</span> <i class="pull-right fa fa-user"></i></a></li>
                 <li><a href="#"><span class="pull-left">Settings</span> <i class="pull-right fa fa-cog"></i></a></li>
                 <li class="divider"></li>
                 <li><a href="#"><span class="pull-left">Earnings</span> <i class="pull-right fa fa-line-chart"></i></a></li>
                 <li><a href="#"><span class="pull-left">Statement</span> <i class="pull-right fa fa-list-alt"></i></a></li>
-                <li><a href="#"><span class="pull-left">Withdrawals</span> <i class="pull-right fa fa-dollar"></i></a></li>
+                <li><a href="#"><span class="pull-left">Withdrawals</span> <i class="pull-right fa fa-dollar"></i></a></li>-->
                 <li class="divider"></li>
                 <li><a href="#"><span class="pull-left">Sign Out</span> <i class="pull-right fa fa-sign-out"></i></a></li>
             </ul>
