Color de header

--- a/app/index.html
+++ b/app/index.html
@@ -170,7 +170,8 @@
         role="banner"
         ng-show="!layoutLoading"
         ng-cloak
-        id="topnav">
+        id="topnav"
+        style="background-color: #eee;">
 
     <span id="trigger-sidebar" class="toolbar-trigger toolbar-icon-bg" ng-click="toggleLeftBar()" ng-show="!getLayoutOption('layoutHorizontal')">
         <a data-toggle="tooltips" data-placement="right" title="Toggle Sidebar"><span class="icon-bg"><i class="fa fa-fw fa-bars"></i></span></a>
