Log-out y  cambios minimos

--- a/app/index.html
+++ b/app/index.html
@@ -193,7 +193,6 @@
         <li class="dropdown toolbar-icon-bg">
             <a class="dropdown-toggle" data-toggle='dropdown'><span class="icon-bg"><i class="fa fa-fw fa-user"></i></span></a>
             <ul class="dropdown-menu userinfo arrow">
-                <li><a href="#/app-vistaLocLis"><span class="pull-left">Locaciones</span></a></li>
                 <li><a href="#/app-vistaFacturacion"><span class="pull-left">Facturacion</span></a></li>
                 <li><a href="#/app-vistaListas"><span class="pull-left">Listas</span></a></li>
                 <!--<li><a href="#"><span class="pull-left">Account</span> <i class="pull-right fa fa-user"></i></a></li>
@@ -203,7 +202,7 @@
                 <li><a href="#"><span class="pull-left">Statement</span> <i class="pull-right fa fa-list-alt"></i></a></li>
                 <li><a href="#"><span class="pull-left">Withdrawals</span> <i class="pull-right fa fa-dollar"></i></a></li>-->
                 <li class="divider"></li>
-                <li><a href="#"><span class="pull-left">Sign Out</span> <i class="pull-right fa fa-sign-out"></i></a></li>
+                <li><a href="#/log-out"><span class="pull-left">Sign Out</span> <i class="pull-right fa fa-sign-out"></i></a></li>
             </ul>
         </li>
 
