--- a/app/index.html
+++ b/app/index.html
@@ -298,9 +298,13 @@
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
+    
+    
     <script src="bower_components/modernizr/modernizr.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-cookie/angular-cookie.js"></script>
+    <script src="bower_components/ng-token-auth/dist/ng-token-auth.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/chartist/dist/chartist.min.js"></script>
