--- a/app/index.html
+++ b/app/index.html
@@ -318,6 +318,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/skycons/skycons.js"></script>
     <script src="bower_components/angular-skycons/angular-skycons.js"></script>
+    <script src="scripts/ui-bootstrap.js"></script>
     <script src="bower_components/angular-ui-grid/ui-grid.js"></script>
     <script src="bower_components/angular-ui-select/dist/select.js"></script>
     <script src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
