Pruebas para user

--- a/app/index.html
+++ b/app/index.html
@@ -420,6 +420,7 @@
     <script src="scripts/core/services/services.js"></script>
     <script src="scripts/core/services/theme.js"></script>
     <script type="text/javascript" src="scripts/core/services/apiService.js"></script>
+    <script type="text/javascript" src="scripts/core/services/modalService.js"></script>
     <script src="scripts/core/theme.js"></script>
     <script src="scripts/calendar/calendar.js"></script>
     <script src="scripts/chart/canvas.js"></script>
