--- a/app/index.html
+++ b/app/index.html
@@ -315,6 +315,7 @@
     <script src="bower_components/angular-nanoscroller/scrollable.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/skycons/skycons.js"></script>
     <script src="bower_components/angular-skycons/angular-skycons.js"></script>
