--- a/app/index.html
+++ b/app/index.html
@@ -202,7 +202,7 @@
                 <li><a href="#"><span class="pull-left">Statement</span> <i class="pull-right fa fa-list-alt"></i></a></li>
                 <li><a href="#"><span class="pull-left">Withdrawals</span> <i class="pull-right fa fa-dollar"></i></a></li>-->
                 <li class="divider"></li>
-                <li><a href="#/log-out"><span class="pull-left">Sign Out</span> <i class="pull-right fa fa-sign-out"></i></a></li>
+                <li><a ng-click="sign_u_out()"><span class="pull-left">Sign Out</span> <i class="pull-right fa fa-sign-out"></i></a></li>
             </ul>
         </li>
 
