--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.min.css" />
     <link rel="stylesheet" href="bower_components/skylo/vendor/styles/skylo.css" />
     <link rel="stylesheet" href="bower_components/textAngular/src/textAngular.css" />
-    <link rel="stylesheet" href="bower_components/themify-icons/themify-icons.css" />
+    
     <link rel="stylesheet" href="bower_components/weather-icons/css/weather-icons.min.css" />
     <!-- endbower -->
     <link rel='stylesheet' type="text/css" href="assets/plugins/form-nestable/jquery.nestable.css" />
@@ -294,7 +294,7 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-    <script type='text/javascript' src='https://maps.google.com/maps/api/js?sensor=true'></script>
+    <script type='text/javascript' src='https://maps.google.com/maps/api/AIzaSyBDIgDfpnaCU2WuaArYzECy51c6WwcN6rM'></script>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
