--- a/app/index.html
+++ b/app/index.html
@@ -244,7 +244,7 @@
                                     </div>
                                     <div class="tabular-cell welcome-options">
                                         <span class="welcome-text">Bienvenido,</span>
-                                        <a href="#" class="name">José Luis</a>
+                                        <a href="#" class="name">Formacret</a>
                                     </div>
                                 </div>
                             </div>
