--- a/app/index.html
+++ b/app/index.html
@@ -293,7 +293,7 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-    <script type='text/javascript' src='https://maps.google.com/maps/api/AIzaSyBDIgDfpnaCU2WuaArYzECy51c6WwcN6rM'></script>
+    <script type='text/javascript' src='https://maps.google.com/maps/api/js?key=AIzaSyBDIgDfpnaCU2WuaArYzECy51c6WwcN6rM'></script>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
