--- a/app/index.html
+++ b/app/index.html
@@ -305,6 +305,7 @@
     
     <script src="bower_components/angular-permission/dist/angular-permission.js"></script>
     <script src="bower_components/angular-permission/dist/angular-permission-ng.js"></script>
+  <script src="bower_components/angular-permission/dist/angular-permission-ng.min.js.map"></script>
     <script src="bower_components/ng-token-auth/dist/ng-token-auth.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
