--- a/app/index.html
+++ b/app/index.html
@@ -304,6 +304,7 @@
     <script src="bower_components/angular/angular.js"></script>
     
     <script src="bower_components/angular-permission/dist/angular-permission.js"></script>
+  <script src="bower_components/angular-permission/dist/angular-permission.min.js.map"></script>
     <script src="bower_components/angular-permission/dist/angular-permission-ng.js"></script>
   <script src="bower_components/angular-permission/dist/angular-permission-ng.min.js.map"></script>
     <script src="bower_components/ng-token-auth/dist/ng-token-auth.js"></script>
