--- a/app/index.html
+++ b/app/index.html
@@ -303,10 +303,8 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     
-    <script src="bower_components/angular-permission/dist/angular-permission.js"></script>
-  <script src="bower_components/angular-permission/dist/angular-permission.min.js.map"></script>
-    <script src="bower_components/angular-permission/dist/angular-permission-ng.js"></script>
-  <script src="bower_components/angular-permission/dist/angular-permission-ng.min.js.map"></script>
+    
+  
     <script src="bower_components/ng-token-auth/dist/ng-token-auth.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
@@ -319,6 +317,15 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/angular-permission/dist/angular-permission.js"></script>
+    <script src="bower_components/angular-permission/dist/angular-permission.min.js"></script>
+    <script src="bower_components/angular-permission/dist/angular-permission.min.js.map"></script>
+    <script src="bower_components/angular-permission/dist/angular-permission-ng.js"></script>
+    <script src="bower_components/angular-permission/dist/angular-permission-ng.min.js"></script>
+    <script src="bower_components/angular-permission/dist/angular-permission-ng.min.js.map"></script>
+    <script src="bower_components/angular-permission/dist/angular-permission-ui.js"></script>
+    <script src="bower_components/angular-permission/dist/angular-permission-ui.min.js."></script>
+    <script src="bower_components/angular-permission/dist/angular-permission-ui.min.js.map"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/skycons/skycons.js"></script>
     <script src="bower_components/angular-skycons/angular-skycons.js"></script>
