less change to css

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content=" KaijuThemes">
 
     <!-- prochtml:remove:dist -->
-    <link href="assets/less/styles.less" rel="stylesheet/less" media="all">
+    <link href="assets/css/styles.css" rel="stylesheet/css" media="all">
     <!-- /prochtml -->
     <link href='https://fonts.googleapis.com/css?family=RobotoDraft:300,400,400italic,500,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700' rel='stylesheet' type='text/css'>
