--- a/app/index.html
+++ b/app/index.html
@@ -290,8 +290,6 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
 
-
-
     <script src="bower_components/ng-token-auth/dist/ng-token-auth.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
@@ -306,24 +304,14 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/angular-permission/dist/angular-permission.js"></script>
     <script src="bower_components/angular-permission/dist/angular-permission.min.js"></script>
-    <script src="bower_components/angular-permission/dist/angular-permission.min.js.map"></script>
     <script src="bower_components/angular-permission/dist/angular-permission-ng.js"></script>
     <script src="bower_components/angular-permission/dist/angular-permission-ng.min.js"></script>
-    <script src="bower_components/angular-permission/dist/angular-permission-ng.min.js.map"></script>
-    <script src="bower_components/angular-permission/dist/angular-permission-ui.js"></script>
-    <script src="bower_components/angular-permission/dist/angular-permission-ui.min.js."></script>
-    <script src="bower_components/angular-permission/dist/angular-permission-ui.min.js.map"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/skycons/skycons.js"></script>
-    <script src="bower_components/angular-skycons/angular-skycons.js"></script>
     <script src="scripts/ui-bootstrap.js"></script>
     <script src="bower_components/angular-ui-grid/ui-grid.js"></script>
     <script src="bower_components/angular-ui-select/dist/select.js"></script>
     <script src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
     <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
-    <script src="bower_components/d3/d3.js"></script>
-    <script src="bower_components/nvd3/nv.d3.js"></script>
-    <script src="bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/bootbox.js/bootbox.js"></script>
     <script src="bower_components/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
@@ -332,13 +320,7 @@
     <script src="bower_components/bower-jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
     <script src="bower_components/bower-jvectormap/jquery-jvectormap-world-mill-en.js"></script>
     <script src="bower_components/card/lib/js/jquery.card.js"></script>
-    <script src="bower_components/enquire/dist/enquire.js"></script>
-    <script src="bower_components/flot/jquery.flot.js"></script>
-    <script src="bower_components/flot/jquery.flot.stack.js"></script>
-    <script src="bower_components/flot/jquery.flot.pie.js"></script>
-    <script src="bower_components/flot/jquery.flot.resize.js"></script>
     <script src="bower_components/flot.tooltip/js/jquery.flot.tooltip.js"></script>
-    <script src="bower_components/gmaps/gmaps.js"></script>
     <script src="bower_components/google-code-prettify/src/prettify.js"></script>
     <script src="bower_components/iCheck/icheck.min.js"></script>
     <script src="bower_components/jquery-autosize/jquery.autosize.js"></script>
@@ -406,6 +388,7 @@
 
 
     <script src="scripts/core/controllers/mainController.js"></script>
+    <script src="scripts/core/controllers/productsController.js"></script>
     <script src="scripts/core/controllers/navigationController.js"></script>
     <script src="scripts/core/controllers/notificationsController.js"></script>
     <script src="scripts/core/controllers/messagesController.js"></script>
@@ -418,6 +401,7 @@
     <script src="scripts/core/services/services.js"></script>
     <script src="scripts/core/services/theme.js"></script>
     <script type="text/javascript" src="scripts/core/services/apiService.js"></script>
+    <script type="text/javascript" src="scripts/core/services/recentService.js"></script>
     <script type="text/javascript" src="scripts/core/services/modalService.js"></script>
     <script type="text/javascript" src="scripts/core/services/modalService2.js"></script>
     <script src="scripts/core/theme.js"></script>
