minimisize and optimisize the code

--- a/app/index.html
+++ b/app/index.html
@@ -389,6 +389,8 @@
 
     <script src="scripts/core/controllers/mainController.js"></script>
     <script src="scripts/core/controllers/productsController.js"></script>
+    <script src="scripts/core/controllers/variantsController.js"></script>
+    <script src="scripts/core/controllers/localmController.js"></script>
     <script src="scripts/core/controllers/navigationController.js"></script>
     <script src="scripts/core/controllers/notificationsController.js"></script>
     <script src="scripts/core/controllers/messagesController.js"></script>
